[package]
name = "maelstrom-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple-error = "0.3.0"
tokio = { version = "1.27.0", features = ["full"] }