[lib]
name = "maelstrom"

[package]
authors = ["Ivan Prisyazhnyy <john.koepi@gmail.com>"]
categories = ["asynchronous", "concurrency", "network-programming", "distributed-systems"]
description = "Maelstrom Rust framework"
keywords = ["async", "await", "future", "std", "task"]
license = "MIT"
edition = "2021"
name = "maelstrom-rust"
readme = "README.md"
repository = "https://github.com/sitano/maelstrom-rust-demo"
version = "0.1.0"

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple-error = "0.3.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"

[[example]]
name = "echo"

[[example]]
name = "echo_failure"
