[lib]
name = "maelstrom"

[package]
authors = ["Ivan Prisyazhnyy <john.koepi@gmail.com>"]
categories = ["asynchronous", "concurrency", "network-programming", "distributed-systems", "simulation"]
description = "Maelstrom Rust node framework"
keywords = ["maelstrom", "fly-io", "distributed-systems", "testing"]
license = "EPL-2.0"
edition = "2021"
name = "maelstrom-node"
readme = "README.md"
repository = "https://github.com/sitano/maelstrom-rust-node"
version = "0.1.5"

[dependencies]
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
simple-error = "0.3.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-context = "0.1.3"
tokio-util = "0.7.7"

[[example]]
name = "echo"

[[example]]
name = "echo_failure"

[[example]]
name = "broadcast"

[[example]]
name = "broadcast_sync"

[[example]]
name = "lin_kv"

[[example]]
name = "g_set"
